--- a/header/carousel.html
+++ b/header/carousel.html
@@ -8,19 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="../header/header.css"> -->
-    <style>
-      .carouselImage{
-        margin: 100px 10px;
-        max-width: 100%;
-        height: 400px;
-      }
-      img{
-        aspect-ratio: 3/2;
-        max-width: 100%;
-        height: auto;
-      }
-    </style>
+
           
 </head>
 <body>
@@ -29,20 +17,11 @@
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="../content/carousel_images/hanuman.jpeg" class="d-block w-100" alt="..." height="400px" width="1500px">
+            <img src="../content/carousel_images/hanuman.jpeg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="../content/carousel_content/riceitem_banner.png" class="d-block w-100 custom-size" alt="...">
+            <img src="../content/carousel_images/hanuman_image.jpeg" class="d-block w-100 custom-size" alt="...">
           </div>
-          <!-- <div class="carousel-item" data-bs-interval="3000"> -->
-            <!-- <img src="../content/carousel_content/vegetable_curries_banner.png" class="d-block w-100 custom" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="3000">
-          <img src="../content/carousel_content/paneercurries_banner.png" class="d-block w-100 custom" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="3000">
-            <img src="../content/carousel_content/roti_banner.png" class="d-block w-100 custom" alt="...">
-          </div> -->
         </div>
 
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
