--- a/index.html
+++ b/index.html
@@ -4,30 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bhagyanagar Temples</title>
-    <link rel="stylesheet" href="../home/home.css">
+    <link rel="stylesheet" href="/btm/styling/header.css" />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS and dependencies -->
 </head>
 <body>
-    <!--Header Reference-->
-    <div id="header"></div>
-    <div id="carousel"></div>
-    <div class="patalaHanumanTemple">Patala Hanuman Temple</div>
 
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-md">
+                <div class="navbar-nav fixed-top">
 
-    <!--Script to call header-->
-    <script>
-        // Fetch and inject header
-        fetch('../header/header.html')
-            .then(response => response.text())
-            .then(data => document.getElementById('header').innerHTML = data);
-    </script>
-        <script>
-            // Fetch and inject header
-            fetch('../header/carousel.html')
-                .then(response => response.text())
-                .then(data => document.getElementById('carousel').innerHTML = data);
-        </script>
+                    <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                    <a class="nav-link" href="#">HOLY PLACES</a>
+                    <a class="nav-link" href="#">TEMPLES</a>
+                    <a class="nav-link" href="#">ARTI/CHALISA</a>
+                    <a class="nav-link" href="./bhajan/bhajan.html">BHAJAN</a>
+                    <a class="nav-link" href="#">CONTACT US</a>
+            </div>
+          </nav>
+    </header>
 
-        
-  </body>
+</body>
 </html>
