--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bhagyanagar Temples</title>
-    <link rel="stylesheet" href="/btm/styling/header.css" />
+    <link rel="stylesheet" href="./styling/header.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="#">HOLY PLACES</a>
                     <a class="nav-link" href="#">TEMPLES</a>
                     <a class="nav-link" href="#">ARTI/CHALISA</a>
-                    <a class="nav-link" href="./bhajan/bhajan.html">BHAJAN</a>
+                    <a class="nav-link" href="./bhajan.html">BHAJAN</a>
                     <a class="nav-link" href="#">CONTACT US</a>
             </div>
           </nav>
@@ -30,4 +30,3 @@
 
 </body>
 </html>
-
