--- a/bhajan.html
+++ b/bhajan.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=1080px" />
     <title>Bhagyanagar Temples</title>
     <link rel="stylesheet" href="./styling/bhajan.css" />
   </head>
@@ -12,6 +13,18 @@
     <div class="container">
       <div class="left-pane">
         <ul>
+          <button class="list-item" data-content="./bhajan/hi/shivastakam.html">
+            శివాష్టకం
+          </button>
+          <button class="list-item" data-content="./bhajan/hi/lingastakam.html">
+            లింగాష్టకం
+          </button>
+          <button
+            class="list-item"
+            data-content="./bhajan/hi/sambashivaNeeduMahima.html"
+          >
+            సాంబశివా నీదు మహిమ
+          </button>
           <button
             class="list-item"
             data-content="./bhajan/hi/hanuman_chalisa.html"
@@ -20,47 +33,47 @@
           </button>
           <button
             class="list-item"
-            data-content="/btm/bhajan/hi/hanuman_arti.html"
+            data-content=".//bhajan/hi/hanuman_arti.html"
           >
             Hanuman Arti
           </button>
           <button
             class="list-item"
-            data-content="/btm/bhajan/hi/hanuman_ashtak.html"
+            data-content=".//bhajan/hi/hanuman_ashtak.html"
           >
             Hanuman Asthakam
           </button>
           <button
             class="list-item"
-            data-content="/btm/bhajan/hi/mereladleganesh.html"
+            data-content=".//bhajan/hi/mereladleganesh.html"
           >
             Mere Ladle Ganesh
           </button>
           <button
             class="list-item"
-            data-content="/btm/bhajan/hi/choti_choti_gaiya.html"
+            data-content=".//bhajan/hi/choti_choti_gaiya.html"
           >
             Choti Choti Gaiya
           </button>
           <button
             class="list-item"
-            data-content="/btm/bhajan/hi/kabhirambanke.html"
+            data-content=".//bhajan/hi/kabhirambanke.html"
           >
             Kabhi Ram Banke
           </button>
           <button
             class="list-item"
-            data-content="/btm/bhajan/hi/ramchandra_krapalu.html"
+            data-content=".//bhajan/hi/ramchandra_krapalu.html"
           >
             Sri Ram Chandra Krapalu
           </button>
           <button
             class="list-item"
-            data-content="/btm/bhajan/hi/achutamkeshavam.html"
+            data-content=".//bhajan/hi/achutamkeshavam.html"
           >
             Achyutam Keshavam
           </button>
-          <button class="list-item" data-content="/btm/bhajan/hi/mandmand.html">
+          <button class="list-item" data-content=".//bhajan/hi/mandmand.html">
             Teri Mand Mand muskanya
           </button>
         </ul>
